day 7 easy (original version)